--- a/DisInterfacesWeb/Animaciones/botonModal/index.html
+++ b/DisInterfacesWeb/Animaciones/botonModal/index.html
@@ -8,21 +8,23 @@
 </head>
 <body>
     <section class="galeria">
-        <a href="#modal" class="btn-open">Abre Modal</a>
+        <a href="#modal" class="bton bton__princi">Abre Modal</a>
     </section>
 
     <section class="show" id="modal">
-        <!-- Fondo que se expande -->
         <div class="show__background"></div>
-
-        <!-- Contenedor del modal -->
         <div class="show__modal-container">
             <div class="show__modal">
-                <a href="#" class="show__close">X</a>
-                <img src="HostingerIllustration.svg" alt="Hostinger">
-                <h2>Ten presencia en internet con Hostinger</h2>
-                <p>Utiliza el código "Ana Fuentes" para obtener un súper descuento!</p>
-                <a href="#">Entra Aquí</a>
+                <a href="#" class="show__cerrar">X</a>
+                <div class="show__illustration">
+                    <img src="HostingerIllustration.svg" alt="Hostinger">
+                </div>
+                <div class="show__right">
+                <h2>Ten presencia en internet con Hostinger </h2>
+                <p>Utiliza el código "Alejandro Polo" para obtener un súper descuento!</p>
+                <a href="#" class="bton  bton__princi">Entra Aquí</a>
+                </div>
+            </div>
             </div>
         </div>
     </section>
