--- a/DisInterfacesWeb/index.html
+++ b/DisInterfacesWeb/index.html
@@ -13,6 +13,8 @@
         <li><a href="GRIDLAYOUT/index.html">Ejercicios con Grid</a></li>
         <li><a href="FLEXBOX/ProyectoFlexboxPersonal_AlejandroPoloBarranco/index.html">Proyecto Flexbox Personal</a></li>
         <li><a href="DiseñoPropio_AlejandroPoloBarranco/index.html">Ejercicio Diseño Propio</a></li>
+        <li><a href="MenuHamburgesa/index.html">Menu Hamburgesa</a></li>
+        <li><a href="Animaciones/botonModal/index.html">Boton Modal</a></li>
     </ul>
 </body>
 </html>
