--- a/DesarrolloWebCliente/Ejemplos/Tema6/pruebajson.html
+++ b/DesarrolloWebCliente/Ejemplos/Tema6/pruebajson.html
@@ -33,8 +33,8 @@
 
         const crearCards = (arrayProductos) => {
             const mainpagina = document.createElement("main")
-            arrayProductos.forEach(producto => {
-                const contenido = crearCard(producto.name,producto.img)
+            arrayProductos.amiibo.forEach(producto => {
+                const contenido = crearCard(producto.name,producto.image)
                 mainpagina.appendChild(contenido)
             }
             )
@@ -45,7 +45,7 @@
 
     RealizarSolicitud()
     function getFetchV3(){
-        fetch('https://digimon-api.vercel.app/api/digimon')
+        fetch('https://www.amiiboapi.com/api/amiibo')
             .then(res=>res.json())  
             .then(json=>{console.log(json)
                 crearCards(json)
